--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,10 @@ packages = [{include = "chatter_base"}]
 
 [tool.poetry.dependencies]
 python = "^3.11"
+fastapi = "^0.95.0"
+python-jose = "^3.3.0"
+sqlalchemy = "^2.0.8"
+uvicorn = "^0.21.1"
 
 [build-system]
 requires = ["poetry-core"]
